@@ -162,6 +162,13 @@
 006_029.cpp
 006_030.cpp
 006_031.cpp
+006_032.cpp
+006_033.cpp
+006_034.cpp
+006_035.cpp
+006_036.cpp
+006_037.cpp
+006_038.cpp
 
 #
 # 999: General preprocessing problems
